Add margin styles to badges and card container
Add margin styles for badges and card container

Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,4 +576,10 @@ a:hover {
   color: #163ea3 !important; /* azul aún más fuerte al pasar el mouse */
   text-decoration: underline;
 }
-
+.badges-container {
+  margin-top: 1.2rem;  /* Ajusta el espacio hacia abajo */
+  margin-bottom: 1.8rem; /* Espacio hacia la sección siguiente */
+}
+#community-leadership .card-container {
+  margin-top: 2rem; /* Aumenta el espacio entre badges y tarjetas */
+}
