--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -652,4 +652,9 @@ a:hover {
   opacity: 1;
   transform: translateY(0);
 }
+.section-divider {
+  border-top: 1px solid #e5e7eb;
+  margin-top: 3rem;
+  padding-top: 3rem;
+}
 
